--- a/hlsprj/cnnlstm/.cproject
+++ b/hlsprj/cnnlstm/.cproject
@@ -51,25 +51,25 @@
                                 								
                                 <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.compiler.option.include.paths.1023962671" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
                                     									
-                                    <listOptionValue builtIn="false" value="/home/changhong/prj/finn_dev/finn/script/inc/"/>
-                                    									
                                     <listOptionValue builtIn="false" value="/tools/Xilinx/Vitis_HLS/2022.2/lnx64/tools/auto_cc/include"/>
                                     									
                                     <listOptionValue builtIn="false" value="/tools/Xilinx/Vitis_HLS/2022.2/include/ap_sysc"/>
                                     									
                                     <listOptionValue builtIn="false" value="/tools/Xilinx/Vitis_HLS/2022.2/include"/>
                                     									
-                                    <listOptionValue builtIn="false" value="/home/changhong/prj/finn_dev/finn/script/LSTM_HLS/hlsprj"/>
+                                    <listOptionValue builtIn="false" value="/home/changhong/prj/finn/script/LSTM_HLS/hlsprj"/>
                                     									
                                     <listOptionValue builtIn="false" value="/tools/Xilinx/Vitis_HLS/2022.2/lnx64/tools/systemc/include"/>
                                     									
                                     <listOptionValue builtIn="false" value="/tools/Xilinx/Vitis_HLS/2022.2/include/etc"/>
                                     									
-                                    <listOptionValue builtIn="false" value="/home/changhong/prj/finn_dev/finn/script/LSTM_HLS/inc/"/>
+                                    <listOptionValue builtIn="false" value="/home/changhong/prj/finn_dev/finn/script/inc/"/>
                                     									
                                     <listOptionValue builtIn="false" value="/home/changhong/prj/finn_dev/finn/script/LSTM_HLS/inc"/>
                                     									
-                                    <listOptionValue builtIn="false" value="/home/changhong/prj/finn/script/LSTM_HLS/hlsprj"/>
+                                    <listOptionValue builtIn="false" value="/home/changhong/prj/finn_dev/finn/script/LSTM_HLS/hlsprj"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="/home/changhong/prj/finn_dev/finn/script/LSTM_HLS/inc/"/>
                                     								
                                 </option>
                                 								
@@ -95,25 +95,25 @@
                                 								
                                 <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.c.compiler.option.include.paths.642744301" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
                                     									
-                                    <listOptionValue builtIn="false" value="/home/changhong/prj/finn_dev/finn/script/inc/"/>
-                                    									
                                     <listOptionValue builtIn="false" value="/tools/Xilinx/Vitis_HLS/2022.2/lnx64/tools/auto_cc/include"/>
                                     									
                                     <listOptionValue builtIn="false" value="/tools/Xilinx/Vitis_HLS/2022.2/include/ap_sysc"/>
                                     									
                                     <listOptionValue builtIn="false" value="/tools/Xilinx/Vitis_HLS/2022.2/include"/>
                                     									
-                                    <listOptionValue builtIn="false" value="/home/changhong/prj/finn_dev/finn/script/LSTM_HLS/hlsprj"/>
+                                    <listOptionValue builtIn="false" value="/home/changhong/prj/finn/script/LSTM_HLS/hlsprj"/>
                                     									
                                     <listOptionValue builtIn="false" value="/tools/Xilinx/Vitis_HLS/2022.2/lnx64/tools/systemc/include"/>
                                     									
                                     <listOptionValue builtIn="false" value="/tools/Xilinx/Vitis_HLS/2022.2/include/etc"/>
                                     									
-                                    <listOptionValue builtIn="false" value="/home/changhong/prj/finn_dev/finn/script/LSTM_HLS/inc/"/>
+                                    <listOptionValue builtIn="false" value="/home/changhong/prj/finn_dev/finn/script/inc/"/>
                                     									
                                     <listOptionValue builtIn="false" value="/home/changhong/prj/finn_dev/finn/script/LSTM_HLS/inc"/>
                                     									
-                                    <listOptionValue builtIn="false" value="/home/changhong/prj/finn/script/LSTM_HLS/hlsprj"/>
+                                    <listOptionValue builtIn="false" value="/home/changhong/prj/finn_dev/finn/script/LSTM_HLS/hlsprj"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="/home/changhong/prj/finn_dev/finn/script/LSTM_HLS/inc/"/>
                                     								
                                 </option>
                                 								
@@ -191,7 +191,7 @@
                                 								
                                 <listOptionValue builtIn="false" value="/tools/Xilinx/Vitis_HLS/2022.2/include"/>
                                 								
-                                <listOptionValue builtIn="false" value="/home/changhong/prj/finn_dev/finn/script/LSTM_HLS/hlsprj"/>
+                                <listOptionValue builtIn="false" value="/home/changhong/prj/finn/script/LSTM_HLS/hlsprj"/>
                                 								
                                 <listOptionValue builtIn="false" value="/tools/Xilinx/Vitis_HLS/2022.2/lnx64/tools/systemc/include"/>
                                 								
@@ -215,13 +215,15 @@
                             							
                             <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.compiler.option.include.paths.552556198" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" valueType="includePath">
                                 								
+                                <listOptionValue builtIn="false" value="/inc"/>
+                                								
                                 <listOptionValue builtIn="false" value="/tools/Xilinx/Vitis_HLS/2022.2/lnx64/tools/auto_cc/include"/>
                                 								
                                 <listOptionValue builtIn="false" value="/tools/Xilinx/Vitis_HLS/2022.2/include/ap_sysc"/>
                                 								
                                 <listOptionValue builtIn="false" value="/tools/Xilinx/Vitis_HLS/2022.2/include"/>
                                 								
-                                <listOptionValue builtIn="false" value="/home/changhong/prj/finn_dev/finn/script/LSTM_HLS/hlsprj"/>
+                                <listOptionValue builtIn="false" value="/home/changhong/prj/finn/script/LSTM_HLS/hlsprj"/>
                                 								
                                 <listOptionValue builtIn="false" value="/tools/Xilinx/Vitis_HLS/2022.2/lnx64/tools/systemc/include"/>
                                 								
@@ -239,7 +241,7 @@
                     					
                     <sourceEntries>
                         						
-                        <entry excluding=".apc|.settings|.vscode|solution1|*.c*|*.C*" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+                        <entry excluding=".apc|.reference|.settings|.vscode|solution1|*.c*|*.C*" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
                         					
                     </sourceEntries>
                     				
@@ -299,25 +301,25 @@
                                 								
                                 <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.compiler.option.include.paths.2050859888" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
                                     									
-                                    <listOptionValue builtIn="false" value="/home/changhong/prj/finn_dev/finn/script/inc/"/>
-                                    									
                                     <listOptionValue builtIn="false" value="/tools/Xilinx/Vitis_HLS/2022.2/lnx64/tools/auto_cc/include"/>
                                     									
                                     <listOptionValue builtIn="false" value="/tools/Xilinx/Vitis_HLS/2022.2/include/ap_sysc"/>
                                     									
                                     <listOptionValue builtIn="false" value="/tools/Xilinx/Vitis_HLS/2022.2/include"/>
                                     									
-                                    <listOptionValue builtIn="false" value="/home/changhong/prj/finn_dev/finn/script/LSTM_HLS/hlsprj"/>
+                                    <listOptionValue builtIn="false" value="/home/changhong/prj/finn/script/LSTM_HLS/hlsprj"/>
                                     									
                                     <listOptionValue builtIn="false" value="/tools/Xilinx/Vitis_HLS/2022.2/lnx64/tools/systemc/include"/>
                                     									
                                     <listOptionValue builtIn="false" value="/tools/Xilinx/Vitis_HLS/2022.2/include/etc"/>
                                     									
-                                    <listOptionValue builtIn="false" value="/home/changhong/prj/finn_dev/finn/script/LSTM_HLS/inc/"/>
+                                    <listOptionValue builtIn="false" value="/home/changhong/prj/finn_dev/finn/script/inc/"/>
                                     									
                                     <listOptionValue builtIn="false" value="/home/changhong/prj/finn_dev/finn/script/LSTM_HLS/inc"/>
                                     									
-                                    <listOptionValue builtIn="false" value="/home/changhong/prj/finn/script/LSTM_HLS/hlsprj"/>
+                                    <listOptionValue builtIn="false" value="/home/changhong/prj/finn_dev/finn/script/LSTM_HLS/hlsprj"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="/home/changhong/prj/finn_dev/finn/script/LSTM_HLS/inc/"/>
                                     								
                                 </option>
                                 								
@@ -333,25 +335,25 @@
                                 								
                                 <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.c.compiler.option.include.paths.300192878" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
                                     									
-                                    <listOptionValue builtIn="false" value="/home/changhong/prj/finn_dev/finn/script/inc/"/>
-                                    									
                                     <listOptionValue builtIn="false" value="/tools/Xilinx/Vitis_HLS/2022.2/lnx64/tools/auto_cc/include"/>
                                     									
                                     <listOptionValue builtIn="false" value="/tools/Xilinx/Vitis_HLS/2022.2/include/ap_sysc"/>
                                     									
                                     <listOptionValue builtIn="false" value="/tools/Xilinx/Vitis_HLS/2022.2/include"/>
                                     									
-                                    <listOptionValue builtIn="false" value="/home/changhong/prj/finn_dev/finn/script/LSTM_HLS/hlsprj"/>
+                                    <listOptionValue builtIn="false" value="/home/changhong/prj/finn/script/LSTM_HLS/hlsprj"/>
                                     									
                                     <listOptionValue builtIn="false" value="/tools/Xilinx/Vitis_HLS/2022.2/lnx64/tools/systemc/include"/>
                                     									
                                     <listOptionValue builtIn="false" value="/tools/Xilinx/Vitis_HLS/2022.2/include/etc"/>
                                     									
-                                    <listOptionValue builtIn="false" value="/home/changhong/prj/finn_dev/finn/script/LSTM_HLS/inc/"/>
+                                    <listOptionValue builtIn="false" value="/home/changhong/prj/finn_dev/finn/script/inc/"/>
                                     									
                                     <listOptionValue builtIn="false" value="/home/changhong/prj/finn_dev/finn/script/LSTM_HLS/inc"/>
                                     									
-                                    <listOptionValue builtIn="false" value="/home/changhong/prj/finn/script/LSTM_HLS/hlsprj"/>
+                                    <listOptionValue builtIn="false" value="/home/changhong/prj/finn_dev/finn/script/LSTM_HLS/hlsprj"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="/home/changhong/prj/finn_dev/finn/script/LSTM_HLS/inc/"/>
                                     								
                                 </option>
                                 								
@@ -419,7 +421,7 @@
                                 								
                                 <listOptionValue builtIn="false" value="/tools/Xilinx/Vitis_HLS/2022.2/include"/>
                                 								
-                                <listOptionValue builtIn="false" value="/home/changhong/prj/finn_dev/finn/script/LSTM_HLS/hlsprj"/>
+                                <listOptionValue builtIn="false" value="/home/changhong/prj/finn/script/LSTM_HLS/hlsprj"/>
                                 								
                                 <listOptionValue builtIn="false" value="/tools/Xilinx/Vitis_HLS/2022.2/lnx64/tools/systemc/include"/>
                                 								
@@ -443,13 +445,15 @@
                             							
                             <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.compiler.option.include.paths.1225084514" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" valueType="includePath">
                                 								
+                                <listOptionValue builtIn="false" value="/inc"/>
+                                								
                                 <listOptionValue builtIn="false" value="/tools/Xilinx/Vitis_HLS/2022.2/lnx64/tools/auto_cc/include"/>
                                 								
                                 <listOptionValue builtIn="false" value="/tools/Xilinx/Vitis_HLS/2022.2/include/ap_sysc"/>
                                 								
                                 <listOptionValue builtIn="false" value="/tools/Xilinx/Vitis_HLS/2022.2/include"/>
                                 								
-                                <listOptionValue builtIn="false" value="/home/changhong/prj/finn_dev/finn/script/LSTM_HLS/hlsprj"/>
+                                <listOptionValue builtIn="false" value="/home/changhong/prj/finn/script/LSTM_HLS/hlsprj"/>
                                 								
                                 <listOptionValue builtIn="false" value="/tools/Xilinx/Vitis_HLS/2022.2/lnx64/tools/systemc/include"/>
                                 								
@@ -467,7 +471,7 @@
                     					
                     <sourceEntries>
                         						
-                        <entry excluding=".apc|.settings|.vscode|solution1|*.c*|*.C*" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+                        <entry excluding=".apc|.reference|.settings|.vscode|solution1|*.c*|*.C*" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
                         					
                     </sourceEntries>
                     				
